objects/ssot__MessagingSession__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcceptedDateTime__c</fullName>
        <label>Accepted DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ConversationId__c</fullName>
        <label>Conversation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelId__c</fullName>
        <label>Engagement Channel</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelType__c</fullName>
        <label>Engagement Channel Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Messaging Session Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastReferencedDateTime__c</fullName>
        <label>Last Referenced DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastViewedDateTime__c</fullName>
        <label>Last Viewed DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MessagingSessionEndTime__c</fullName>
        <label>Messaging Session End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MessagingSessionStartTime__c</fullName>
        <label>Messaging Session Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MessagingSessionStatus__c</fullName>
        <label>Messaging Session Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Origin__c</fullName>
        <label>Origin</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviewDetailsText__c</fullName>
        <label>Preview Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SoftwareApplicationId__c</fullName>
        <label>Do Not Use Software Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726580347_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MessagingSession_ConversationId_map__rel</label>
        <referenceTo>ssot__Conversation__dlm</referenceTo>
        <relationshipLabel>MessagingSession_ConversationId_map__rel</relationshipLabel>
        <relationshipName>rel_1716726580347_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>